--- a/src/main/webapp/curso/listaCursos.xhtml
+++ b/src/main/webapp/curso/listaCursos.xhtml
@@ -4,48 +4,45 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      >
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h:form id="frmListaCursos">
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
-            <p:panelGrid>
+    <ui:composition template="/plantilla/uiMaestro.xhtml">
+        <ui:define name="app">
+            <div align="center">
+                <h1>#{etiquetas.cl_cursos_titulo_listado}</h1>
+                <h:form id="frmListaCursos">
 
-                <f:facet
-                    name="header">
-                    Listado de Cursos
-                </f:facet>
+                    <p:panelGrid style="border: 0">
+                        <p:row>
+                            <p:column>
+                                <p:dataTable id="tablaCursos" value="#{cursoManagedBean.listaCursos}" var="objCurso">
 
-                <p:row>
-                    <p:column>
-                        <p:dataTable id="tablaCursos" value="#{cursoManagedBean.listaCursos}" var="objCurso">
-
-                            <p:column headerText="Codigo">#{objCurso.codigoCurso}</p:column>
-                            <p:column headerText="Descripcion">#{objCurso.descripcionCurso}</p:column>
-                            <p:column headerText="">
-                                <p:commandLink action="#{cursoManagedBean.obtenerCurso}" value="A">
-                                     <f:setPropertyActionListener target="#{cursoManagedBean.codigoCurso}" value="#{objCurso.codigoCurso}"></f:setPropertyActionListener>
-                                </p:commandLink>
-                               
+                                    <p:column headerText="Codigo">#{objCurso.codigoCurso}</p:column>
+                                    <p:column headerText="Descripcion">#{objCurso.nombreCurso}</p:column>
+                                    <p:column headerText="">
+                                        <p:commandLink action="#{cursoManagedBean.obtenerCurso}" value="A" >                                       
+                                            <f:setPropertyActionListener target="#{cursoManagedBean.codigoCurso}" value="#{objCurso.codigoCurso}"></f:setPropertyActionListener>
+                                        </p:commandLink>                                    
+                                    </p:column>
+                                    <p:column headerText="">
+                                        <p:commandLink action="#{cursoManagedBean.eliminarCurso}" value="E" update=":frmListaCursos:tablaCursos">
+                                            <f:setPropertyActionListener target="#{cursoManagedBean.codigoCurso}" value="#{objCurso.codigoCurso}"></f:setPropertyActionListener>
+                                        </p:commandLink>
+                                    </p:column>
+                                </p:dataTable>
                             </p:column>
-                              <p:column headerText="">
-                                  <p:commandLink action="#{cursoManagedBean.eliminarCurso}" value="E" update=":frmListaCursos:tablaCursos">
-                                     <f:setPropertyActionListener target="#{cursoManagedBean.codigoCurso}" value="#{objCurso.codigoCurso}"></f:setPropertyActionListener>
-                                </p:commandLink>
-                               
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:commandLink value="Nuevo Curso" action="#{cursoManagedBean.nuevoCurso}"></p:commandLink>
                             </p:column>
-                        </p:dataTable>
-                    </p:column>
-                </p:row>
-                <p:row>
-                    <p:column>
-                        <p:commandLink value="Nuevo Curso" action="#{cursoManagedBean.nuevoCurso}"></p:commandLink>
-                    </p:column>
-                </p:row>
-            </p:panelGrid>
-        </h:form>
-    </h:body>
+                        </p:row>
+                    </p:panelGrid>
+                </h:form>
+            </div>
+
+        </ui:define>
+    </ui:composition>
+
 </html>
 
