CAMBIO AL APELLIDO

--- a/src/main/webapp/plantilla/uiMaestro.xhtml
+++ b/src/main/webapp/plantilla/uiMaestro.xhtml
@@ -33,7 +33,7 @@
                 <p:layoutUnit position="south" size="100">
                     <h2>Integrantes:</h2>
                     <ul>
-                    <li>Luis Benvenuto</li>
+                    <li>Luis Benvenuto Calderón</li>
                     <li>Elmer Montenegro Ybañez</li>
                     <li>Josué Huancapaza Córdova </li>
                     </ul>
