CAMBIOS DONDE SE AGREGO LAS ANOTACIONES DE SPRING SECURITY EN WEB.XML

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,7 +10,7 @@
 
         <ui:define name="content">
 
-            <h:form id="frmLogin">
+            <h:form id="frmLogin" prependId="false">
 
                 <center>
 
