CAMBIOS PARA PERMISOS EN METODOS

--- a/src/main/webapp/accesoNoAutorizado.xhtml
+++ b/src/main/webapp/accesoNoAutorizado.xhtml
@@ -12,7 +12,7 @@
             <center>
 
                 <h:outputText 
-                    value="#{etiquetas.cl_mensaje_denegado}"
+                    value="#{etiquetas.cl_mensaje_autorizacion}"
                     style="font-weight: bold; color: red" />
 
             </center>
