CAMBIOS PARA INTERNACIONALIZACION ESPAÑOL E INGLÉS

--- a/src/main/webapp/plantilla/uiCabecera.xhtml
+++ b/src/main/webapp/plantilla/uiCabecera.xhtml
@@ -15,7 +15,7 @@
 
                     <td>
 
-                        <h:outputText value="Bienvenido al sistema #{myAuthenticationProvider.objUsuario.nombre}"></h:outputText>
+                        <h:outputText value="#{etiquetas.cl_bienvenido} #{myAuthenticationProvider.objUsuario.nombre}"></h:outputText>
 
 
                     </td>
