--- a/src/main/webapp/plantilla/uiMaestroBlank.xhtml
+++ b/src/main/webapp/plantilla/uiMaestroBlank.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui" >
-    <f:view contentType="text/html" locale="es">
+    <f:view contentType="text/html" locale="#{usuarioManagedBean.v_locale}">
 
         <h:body>
             <p:layout fullPage="true">
