--- a/src/main/webapp/plantilla/uiMenu.xhtml
+++ b/src/main/webapp/plantilla/uiMenu.xhtml
@@ -5,9 +5,9 @@
     <ui:composition>
         <h:form style="height: 100%; width: 100%;" >
             <p:menu style="margin: auto; width: 180px;">  
-                <p:submenu label="Cursos">  
-                    <p:menuitem action="#{cursoManagedBean.listarCursos}" value="Listado" icon="ui-icon-home" />  
-                    <p:menuitem action="#{cursoManagedBean.nuevoCurso}" value="Nuevo" icon="ui-icon-home"/>  
+                <p:submenu label="#{etiquetas.cl_submenu_curso}">  
+                    <p:menuitem action="#{cursoManagedBean.listarCursos}" value="#{etiquetas.cl_menuitem_curso_listado}" icon="ui-icon-home" />  
+                    <p:menuitem action="#{cursoManagedBean.nuevoCurso}" value="#{etiquetas.cl_menuitem_curso_nuevo}" icon="ui-icon-home"/>  
                 </p:submenu>                  
                 <p:submenu label="Frameworks">  
                     <p:menuitem value="PrimeFaces" url="http://www.primefaces.org" icon="ui-icon-home" target="_blank"/>                      
