--- a/src/main/webapp/curso/registroCursos.xhtml
+++ b/src/main/webapp/curso/registroCursos.xhtml
@@ -12,7 +12,7 @@
 
                 <h:form id="frmRegistrarCurso">
                     <h:inputHidden value="#{cursoManagedBean.objCurso.codigoCurso}"></h:inputHidden>
-                    <p:panel header="#{etiquetas.cl_cursos_titulo_registro}" style="width: 250px;"> 
+                    <p:panel header="#{etiquetas['cl_cursos_titulo_registro']}" style="width: 250px;"> 
                         <p:panelGrid>
                             <p:row>
                                 <p:column>
@@ -38,7 +38,7 @@
                                 </p:column>
                                 <p:column>                                    
                                     <p:selectOneMenu value="#{cursoManagedBean.objCurso.tipoCurso}" required="true" requiredMessage="Seleccione Tipo Curso">
-                                        <f:selectItem itemValue="" itemLabel="--Seleccione--"/>
+                                        <f:selectItem itemValue="" itemLabel="#{etiquetas.cl_seleccion_defecto}"/>
                                         <f:selectItems value="#{cursoManagedBean.listTipoCurso}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -49,7 +49,7 @@
                                 </p:column>
                                 <p:column>                                    
                                     <p:selectOneMenu value="#{cursoManagedBean.objCurso.modalidadPago}" required="true" requiredMessage="Seleccione modalidad de pago">
-                                        <f:selectItem itemValue="" itemLabel="--Seleccione--"/>
+                                        <f:selectItem itemValue="" itemLabel="#{etiquetas.cl_seleccion_defecto}"/>
                                         <f:selectItems value="#{cursoManagedBean.listModalidadPago}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -81,7 +81,7 @@
 
                             <p:row>
                                 <p:column colspan="2">
-                                    <p:commandButton value="Grabar" action="#{cursoManagedBean.grabarCurso}" update="message" ajax="false"></p:commandButton>
+                                    <p:commandButton value="#{etiquetas.cl_button_grabar}" action="#{cursoManagedBean.grabarCurso}" update="message" ajax="false"></p:commandButton>
                                 </p:column>
                             </p:row> 
                         </p:panelGrid>
