--- a/src/main/webapp/curso/registroCursos.xhtml
+++ b/src/main/webapp/curso/registroCursos.xhtml
@@ -19,7 +19,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_nombre}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>
-                                    <p:inputText value="#{cursoManagedBean.objCurso.nombreCurso}" required="true" requiredMessage="Ingrese nombre de curso"></p:inputText>
+                                    <p:inputText value="#{cursoManagedBean.objCurso.nombreCurso}" required="true" requiredMessage="#{etiquetas.cl_mensaje_nombre_curso}"></p:inputText>
                                 </p:column>                                        
                             </p:row>
 
@@ -28,7 +28,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_descripcion}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>
-                                    <p:inputTextarea value="#{cursoManagedBean.objCurso.descripcionCurso}" cols="20" rows="5" required="true" requiredMessage="Ingrese descripción de curso"></p:inputTextarea>
+                                    <p:inputTextarea value="#{cursoManagedBean.objCurso.descripcionCurso}" cols="20" rows="5" required="true" requiredMessage="#{etiquetas.cl_mensaje_descripcion_curso}"></p:inputTextarea>
                                 </p:column>
                             </p:row>
 
@@ -37,7 +37,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_tipoCurso}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:selectOneMenu value="#{cursoManagedBean.objCurso.tipoCurso}" required="true" requiredMessage="Seleccione Tipo Curso">
+                                    <p:selectOneMenu value="#{cursoManagedBean.objCurso.tipoCurso}" required="true" requiredMessage="#{etiquetas.cl_mensaje_tipo_curso}">
                                         <f:selectItem itemValue="" itemLabel="#{etiquetas.cl_seleccion_defecto}"/>
                                         <f:selectItems value="#{cursoManagedBean.listTipoCurso}"/>
                                     </p:selectOneMenu>
@@ -48,7 +48,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_modPago}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:selectOneMenu value="#{cursoManagedBean.objCurso.modalidadPago}" required="true" requiredMessage="Seleccione modalidad de pago">
+                                    <p:selectOneMenu value="#{cursoManagedBean.objCurso.modalidadPago}" required="true" requiredMessage="#{etiquetas.cl_mensaje_modalidad_curso}">
                                         <f:selectItem itemValue="" itemLabel="#{etiquetas.cl_seleccion_defecto}"/>
                                         <f:selectItems value="#{cursoManagedBean.listModalidadPago}"/>
                                     </p:selectOneMenu>
@@ -59,7 +59,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_duracion}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:inputText value="#{cursoManagedBean.objCurso.duracion}" required="true" requiredMessage="Ingrese duración"></p:inputText> <h:outputText value=" horas"></h:outputText>
+                                    <p:inputText value="#{cursoManagedBean.objCurso.duracion}" required="true" requiredMessage="#{etiquetas.cl_mensaje_duracion_curso}"></p:inputText> <h:outputText value=" horas"></h:outputText>
                                 </p:column>
                             </p:row>
                             <p:row>
@@ -67,7 +67,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_prerequisitos}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:inputTextarea value="#{cursoManagedBean.objCurso.preRequisitos}" required="true" requiredMessage="Ingrese pre requisitos"></p:inputTextarea>
+                                    <p:inputTextarea value="#{cursoManagedBean.objCurso.preRequisitos}" required="true" requiredMessage="#{etiquetas.cl_mensaje_prerequisitos_curso}"></p:inputTextarea>
                                 </p:column>
                             </p:row>
                              <p:row>
@@ -75,7 +75,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_creditos}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:inputText value="#{cursoManagedBean.objCurso.creditos}" required="true" requiredMessage="Ingrese número de créditos"></p:inputText>
+                                    <p:inputText value="#{cursoManagedBean.objCurso.creditos}" required="true" requiredMessage="#{etiquetas.cl_mensaje_creditos_curso}"></p:inputText>
                                 </p:column>
                             </p:row>
 
