--- a/src/main/webapp/plantilla/uiCabecera.xhtml
+++ b/src/main/webapp/plantilla/uiCabecera.xhtml
@@ -22,7 +22,7 @@
                     <td>
 
 
-                     <a href="#{request.contextPath}/j_spring_security_logout">Logout</a>
+                     <a href="#{request.contextPath}/j_spring_security_logout">#{etiquetas.cl_salir}</a>
                      
                     </td>
 
