--- a/src/main/webapp/curso/registroCursos.xhtml
+++ b/src/main/webapp/curso/registroCursos.xhtml
@@ -59,7 +59,7 @@
                                     <p:outputLabel value="#{etiquetas.cl_cursos_duracion}: "></p:outputLabel>
                                 </p:column>
                                 <p:column>                                    
-                                    <p:inputText value="#{cursoManagedBean.objCurso.duracion}" required="true" requiredMessage="#{etiquetas.cl_mensaje_duracion_curso}"></p:inputText> <h:outputText value=" horas"></h:outputText>
+                                    <p:inputText value="#{cursoManagedBean.objCurso.duracion}" required="true" requiredMessage="#{etiquetas.cl_mensaje_duracion_curso}"></p:inputText> <h:outputText value=" #{etiquetas.cl_unidad_tiempo}"></h:outputText>
                                 </p:column>
                             </p:row>
                             <p:row>
